# ChangeLog for app-text/ptex
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/ptex/ChangeLog,v 1.94 2010/06/28 10:55:33 jer Exp $

  28 Jun 2010; Jeroen Roovers <jer@gentoo.org>
  ptex-3.1.10_p20090610-r1.ebuild:
  Stable for HPPA (bug #319509).

  27 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
  ptex-3.1.10_p20090610-r1.ebuild:
  amd64 stable wrt #319509

  24 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  ptex-3.1.10_p20090610-r1.ebuild:
  x86 stable wrt bug #319509

  08 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  ptex-3.1.10_p20090610-r1.ebuild,
  +files/ptex-3.1.10_p20090610-libpng14.patch:
  Fix building with libpng14 (copied from app-text/dvipdfm and
  app-text/dvipdfmx).

  11 Dec 2009; Brent Baude <ranger@gentoo.org> ptex-3.1.10_p20090610.ebuild:
  Marking ptex-3.1.10_p20090610 ppc64 for bug 289339

  09 Dec 2009; nixnut <nixnut@gentoo.org> ptex-3.1.10_p20090610.ebuild:
  ppc stable #289339

  18 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  ptex-3.1.10_p20090610.ebuild:
  ia64/sh/sparc stable wrt #289339

*ptex-3.1.10_p20090610-r1 (15 Nov 2009)

  15 Nov 2009; MATSUU Takuto <matsuu@gentoo.org>
  -ptex-3.1.10_p20080128.ebuild, -ptex-3.1.10_p20080414.ebuild,
  +ptex-3.1.10_p20090610-r1.ebuild,
  -files/ptex-3.1.10_p20080128-gentoo.patch,
  -files/ptex-3.1.10_p20080414-gentoo.patch,
  +files/ptex-3.1.10_p20090610-r1-gentoo.patch:
  Fixed fonts handling. Fixed texmf override issue. Removed old versions.

  10 Nov 2009; Markus Meier <maekke@gentoo.org>
  ptex-3.1.10_p20090610.ebuild:
  arm/x86 stable, bug #289339

  24 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  ptex-3.1.10_p20090610.ebuild:
  Stable on alpha, bug #289339

  23 Oct 2009; Jeroen Roovers <jer@gentoo.org> ptex-3.1.10_p20090610.ebuild:
  Stable for HPPA (bug #289339).

  23 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  ptex-3.1.10_p20090610.ebuild:
  amd64 stable wrt #289339
