@@ -23,8 +23,8 @@ DIST ptetex3-20090610.tar.gz 6502684 RMD160 e14fb24175d674755bcfd99a3ca9e8065774
 DIST ptex-3.1.10_p20071122-dviljk-security-fixes.patch.bz2 8739 RMD160 7a63ebf1ebce0dbd7d48d9dbef2ea663ba187871 SHA1 9dad652088e93a5a6924460bd6c60efe88e9e80b SHA256 af6b92ee2640e754fc3e0b55e8aa7c8436d655f0d38e5afdd3badf5ee5f55c93
 DIST tetex-src-3.0.tar.gz 12749314 RMD160 15a139f5f36993e4ed3583260e175cfb13ce7bcc SHA1 7637789f7f4929694aed1b89820f5bad4753e8fc SHA256 9c0f7eaeb5ba6dc6f66433404d264941bf95cded2fa798b1f7a9dd580c21649b
 DIST tetex-texmf-3.0po.tar.gz 91402377 RMD160 a1e87733fa3cbef04e39a690ed8549aeaaddb241 SHA1 1be97f57a26a6e9b72ebfd932e45914a959aff16 SHA256 6c3b8fa619749cbb28ca0f8847e56773d13e0bb92f1ea34287420950373640c2
-EBUILD ptex-3.1.10_p20071203.ebuild 7837 RMD160 c5637d155307bcac3726b05d37bbbe9a8068bdd5 SHA1 8cfa9ba8e4c4fc10d9d1ba94d7f0f11bb56823f6 SHA256 bc12e8ab650d55b10e310d00f723a8dfa5fbd972f2d037c726e6ef673d23010c
+EBUILD ptex-3.1.10_p20071203.ebuild 7844 RMD160 52e6d7ebebc11d747d95c88bf3d53f1ac7fd91ec SHA1 67f046d16bcb03c65d0a5f8759e8e727b9674f6d SHA256 427e87a24b38d2610cd3510c86aec9068b809bd3abdc1bfb1078afa64a8dbb51
 EBUILD ptex-3.1.10_p20090610-r1.ebuild 8309 RMD160 8809045007a3650b8663aafdb16e20cfd17358f4 SHA1 d90cc657e6a15d92ba28e10ac43e9c39b91617ae SHA256 bba5d2f9179c194d6ba4c508cfab3b49bfc2dd7e57f8847e32e30c2e283d2c5c
-EBUILD ptex-3.1.10_p20090610.ebuild 8208 RMD160 93cc2ebd660e0216d14659537e89b866496f31d0 SHA1 06d26722b6329a95e0bb1c7221be3e14ed32715c SHA256 5e637e54f1c772ec44171a11ef6ae313e41e5b367bdf6bb62c6362525a64ddd3
-MISC ChangeLog 15870 RMD160 038d17ff4f1e5027b9ca50ee4b07eb247deaf758 SHA1 cd837aff91917a9b6e0d1aed0fcd43e788b5c63e SHA256 396c680efc79f2f6dc322ac0d1366b47213a965556ac66fc0f807561b7db071b
+EBUILD ptex-3.1.10_p20090610.ebuild 8212 RMD160 1d6cc97e0bcc55c89a2059c3aec68da477089200 SHA1 498967c3cfc9e4e5e7e9fe827295f423e5644db7 SHA256 33cbd1aafa52fa22b11fa3658aece3ea165d0265c9bc9eca8c9125f3a804a124
+MISC ChangeLog 16041 RMD160 0ae4b059f5d8d36176ce8d915a20c8de41417feb SHA1 1ed79df9ad35dcef44cfee3f9b927fae5dbb5378 SHA256 011b2d5515f498e699627989dd13316d6197fec07960bca68097d9897da2c41d
 MISC metadata.xml 450 RMD160 910d918b9fe476cdb72c633a1c5532549d3f6114 SHA1 33ca5b367c7d2f1d470d8c18afc11230b501da89 SHA256 b9d2baa3e5a641dd35a68feed6752e874b2131480d63989ef5830080a942608b
