@@ -1,6 +1,10 @@
 # ChangeLog for app-text/ptex
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/ptex/ChangeLog,v 1.94 2010/06/28 10:55:33 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ptex/ChangeLog,v 1.95 2010/07/03 23:33:41 ssuominen Exp $
+
+  03 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
+  ptex-3.1.10_p20071203.ebuild, ptex-3.1.10_p20090610.ebuild:
+  Revert back to ~ppc64 wrt #319509 and #323559
 
   28 Jun 2010; Jeroen Roovers <jer@gentoo.org>
   ptex-3.1.10_p20090610-r1.ebuild:
